--- a/Survey-Creater-view/survey-creater/index.html
+++ b/Survey-Creater-view/survey-creater/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon"  />
     <title>Survey-Creater</title>
+    <script src="https://surveyjs.azureedge.net/1.8.25/survey.locale.zh-cn.js"></script>
   </head>
   <body>
     <div id="app"></div>
